syntax = "proto3";
package empowerchain.plasticcredit;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/empowerchain/empowerchain/x/plasticcredit";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  
  string issuer_creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message IDCounters {
  uint64 next_issuer_id = 1;
  uint64 next_collector_id = 2;
  uint64 next_project_id = 3;
  uint64 next_credit_class_id = 4;
}

message Issuer {
  uint64 id = 1;
  string name = 2;
  string description = 3;
  string admin = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message Collector {
  uint64 collector_id = 1; 
  string admin = 2; 
  repeated string accounts = 3; 
  string name = 4; 
  repeated CollectorInfo collector_infos = 5;
  string credit_recipient = 6;
}

message Project {
  uint64 project_id = 1; 
  uint64 credit_class_id = 2; 
  uint64 collector_id = 3; 
  string name = 4; 
  ProvenData project_data = 5;   
}

message CreditClass {
  uint64 credit_class_id = 1; 
  uint64 issuer_id = 2; 
  string denom = 3; 
  ProvenData credit_class_data = 4;  
}

message CreditBatch {
  string batch_denom = 1; 
  uint64 project_id = 2; 
  CreditAmount total_amount = 3; 
  repeated ProvenData credit_data = 4; 
  repeated ProvenData additional_data = 5;  
}

message CreditBalance {
  string owner = 1; 
  CreditAmount balance = 2;   
}

message BatchDenomToCreditBalance {
  string batch_denom = 1;
  repeated CreditBalance credit_balances = 2;
}

message CreditBatchIssuance {
  uint64 project_id = 1; 
  CreditAmount total_amount = 2; 
  repeated ProvenData credit_data = 3; 
  repeated ProvenData additional_data = 4;  
}

message CreditDenom {
  string batch_denom = 2; 
}

message CollectorInfo {
  uint64 issuer_id = 1; 
  string metadata = 2; 
}

message ProvenData {  
  string uri = 1; 
  string hash = 2; 
}

message CreditAmount {
  uint64 active = 1; 
  uint64 retired = 2; 
}